--- a/requirements.txt
+++ b/requirements.txt
@@ -11,11 +11,12 @@ importlib-metadata==5.0.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
+mysql-connector-python==8.0.31
+mysqlclient==2.1.1
 numpy==1.23.4
 pandas==1.5.1
 plotly==5.11.0
-psycopg2==2.9.5
-psycopg2-binary==2.9.5
+protobuf==3.20.1
 python-dateutil==2.8.2
 python-dotenv==0.21.0
 pytz==2022.6
